# omnimem

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  omnimem.spec  package.json  pyproject.toml  run.py
db/: schema.sql
docs/: README.md  README.zh-CN.md  advanced-ops.md  advanced-ops.zh-CN.md  agent-context-quota-research.md  architecture.md  cli-mvp.md  common-commands.md  common-commands.zh-CN.md  decisions.md  install-uninstall.md  install-uninstall.zh-CN.md  integration-spec.md  oauth-broker.md  oauth-broker.zh-CN.md  phase-a-report.md  phase-b-report.md  phase-c-report.md  phase-c.md  phase-d-report.md  phase-workflow.md  publish-npm.md  publish-npm.zh-CN.md  qa-startup-guide.md  qa-startup-guide.zh-CN.md  quickstart-10min.md  quickstart-10min.zh-CN.md  stage-log.md  sync-and-adapters.md  webui-config.md  webui-config.zh-CN.md  webui-plan.md
eval/: locomo_style.sample.jsonl
omnimem/: __init__.py  __main__.py  adapters.py  agent.py  cli.py  codex_watch.py  context_strategy.py  core.py  daemon.py  memory_context.py  oauth.py  webui.py
scripts/: attach_project.sh  bootstrap.sh  build_eval_dataset.py  build_standalone.sh  check_docs_i18n.py  ci_watch.sh  detach_project.sh  enable_governance_preview.py  eval_core_merge.py  eval_locomo_style.py  eval_retrieval.py  install.sh  release_gate.sh  release_prepare.sh  report_docs_health.py  report_webui_i18n_coverage.py  tune_core_merge_from_eval.py  tune_governance_from_eval.py  uninstall.sh  verify_phase_a.sh  verify_phase_b.sh  verify_phase_c.sh  verify_phase_d.sh
spec/: changelog.md  daemon-state.schema.json  (+3 more)
(+65 files in other folders)
