[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnimem"
dynamic = ["version"]
description = "OmniMem CLI and bootstrap runner. Reusable, low-coupling memory infrastructure for AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "OmniMem Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NoPKT/omnimem"
Repository = "https://github.com/NoPKT/omnimem.git"
Issues = "https://github.com/NoPKT/omnimem/issues"

[project.scripts]
omnimem = "omnimem.cli:main"

[tool.hatch.version]
path = "omnimem/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["omnimem"]
include = [
    "omnimem/static/index.html",
    "db/schema.sql",
]

[tool.hatch.build.targets.sdist]
include = [
    "/omnimem",
    "/scripts",
    "/templates",
    "/db",
    "/spec",
    "/docs",
    "/bin"
]
